--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ install:
   - pip install pytest-cov
   - pip install codecov
   - pip install codeclimate-test-reporter
+  - python setup.py install
 
 # command to run tests
 script:
