try to fix codeclimate reporter.

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,5 +20,6 @@ install:
 script:
   mkdir -p tmp/ && cd tmp/
   && pytest -s --verbose --cov=iprir --pyargs iprir.tests
+  && cp .coverage ../ && cd ..
   && codecov
   && codeclimate-test-reporter
