--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,8 @@ install:
 
 # command to run tests
 script:
-  mkdir -p tmp/ && cd tmp/
+  export IPRIR_DEBUG=1
+  && mkdir -p tmp/ && cd tmp/
   && pytest -s --verbose --cov=iprir --pyargs iprir.tests
   && cp .coverage ../ && cd ..
   && codecov
