--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ install:
   - pip install pytest-sugar
   - pip install pytest-cov
   - pip install codecov
-  - python setup.py install --record record.txt && grep -P 'apnic\.sqlite$' record.txt
+  - python setup.py install --record record.txt && grep -P 'iprir\.sqlite$' record.txt
 
 # command to run tests
 script:
